# poly-cli

./: Cargo.toml
.github/workflows/: release_linux.yaml  release_macos.yaml
src/: asset_hasher.rs  backlog_builder.rs  build.rs  cleaner.rs  exec.rs  main.rs  project.rs  project_info.rs  rust_builder.rs  script_runner.rs  serve.rs  typescript_builder.rs  watch.rs  web_builder.rs
src/util/: file_util.rs
